[tool.poetry]
name = "fin-worker"
version = "0.1.0"
description = ""
authors = ["tldrd0117 <tldrd0117@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
cryptography = "^36.0.1"
apache-airflow = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
