[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["tldrd0117 <tldrd0117@gmail.com>"]

[tool.poetry.scripts]
app = 'flask_api.app:run'

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
