[tool.poetry]
name = "fin-crawling-fast-api"
version = "0.1.0"
description = ""
authors = ["tldrd0117 <tldrd0117@gmail.com>"]


[tool.poetry.scripts]
app = 'app.main'

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.64.0"
uvicorn = "^0.13.4"
pymitter = "^0.3.0"
watchdog = "^2.1.0"
pymongo = "^3.11.4"
selenium = "^3.141.0"
websockets = "^9.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"
flake8-mypy = "^17.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
