[tool.poetry]
name = "fin-crawling"
version = "0.1.0"
description = ""
authors = ["tldrd0117 <tldrd0117@gmail.com>"]

[tool.poetry.scripts]
app = 'fin_crawling.app:run'

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
