[tool.poetry]
name = "fin-simulator-server"
version = "0.1.0"
description = ""
authors = ["tldrd0117 <tldrd0117@gmail.com>"]

[tool.poetry.scripts]
app = 'app.main:app'

[tool.poetry.dependencies]
python = "^3.9.7"
fastapi = "^0.73.0"
luigi = {extras = ["toml"], version = "^3.0.3"}
pymongo = "^4.0.1"
pandas = "1.3.4"
python-dotenv = "^0.19.2"
tables = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
